@@ -2,6 +2,7 @@ Revision history for Web-PageMeta
 
 0.04    2021
     - dependency fix (#2 thanks to Slaven Rezić)
+    - add option to set extra http request headers
 
 0.03    25.02.2021
     - add option to set user-agent for http requests
